--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   padding: 0;
@@ -7,9 +6,14 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 300;
-  color: #C1343F;
+  color: #c1343f;
 }
 
 h1 {
@@ -21,13 +25,14 @@ h2 {
 }
 
 a {
-  color: #DD4F53;
+  color: #dd4f53;
 }
 
 header .jumbotron {
   height: 40vh;
   margin-bottom: 0;
-  background: url(../images/misc/background.jpg) no-repeat 100% 5%;
+  /* background: url(../images/misc/background.jpg) no-repeat 100% 5%; */
+  background: url(../images/misc/sjo_background.jpg) no-repeat 100% 5%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -87,13 +92,13 @@ header .navbar-brand {
 }
 
 .feedback-name {
-  font-size: .6em;
+  font-size: 0.6em;
   font-weight: 100;
 }
 
 .feedback-message {
   font-weight: 100;
-  font-size: .9em;
+  font-size: 0.9em;
   line-height: 120%;
   margin-top: 5px;
 }
@@ -103,7 +108,7 @@ header .navbar-brand {
   padding: 8px 0;
 }
 
-.feedback-title{
+.feedback-title {
   font-weight: 400;
   font-size: 1.1em;
 }
@@ -115,7 +120,6 @@ header .navbar-brand {
 .feedback-item:last-of-type {
   border-bottom: none;
 }
-
 
 /**  pixgrid **/
 
