fixes the missing artwork template error by checking the route on the index.ejs template to /partials/artwork

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -67,7 +67,7 @@
               </li>
             </ul>
           </article>
-          <%- include(`../pages/partials${artwork}`) %>;
+          <%- include(`../pages/partials/artwork`) %>;
         </aside>
       </div>
     </div>
