--- a/views/pages/feedback.ejs
+++ b/views/pages/feedback.ejs
@@ -3,13 +3,17 @@
     <div class="col-md-4">
       <div class="maincontent">
         <h1>Send us feedback</h1>
-        <form class="feedback-form">
+
+        <!-- *In forms, we use the POST method and the action the URL the form needs to be sent to = POST ROUTE -->
+
+        <form class="feedback-form" method="POST" action="/feedback">
           <div class="form-group">
             <label for="feedback-form-name">Name</label>
             <input
               type="text"
               class="form-control"
               id="feedback-form-name"
+              name="name"
               placeholder="Enter your name"
             />
           </div>
@@ -19,6 +23,7 @@
               type="text"
               class="form-control"
               id="feedback-form-email"
+              name="email"
               placeholder="Enter your email address"
             />
           </div>
@@ -28,6 +33,7 @@
               type="text"
               class="form-control"
               id="feedback-form-title"
+              name="title"
               placeholder="Title of your feedback"
             />
           </div>
@@ -38,6 +44,7 @@
               placeholder="Enter your message, then hit the submit button"
               class="form-control"
               id="feedback-form-message"
+              name="message"
               rows="6"
             ></textarea>
           </div>
