Adds functionality to handle the data in the form and store it in the feedback.json file

--- a/views/pages/feedback.ejs
+++ b/views/pages/feedback.ejs
@@ -12,8 +12,11 @@
             <% }) %>
           </ul>
         </div>
+        <%} else if (locals.successMessage) {%>
+        <div class="alert alert-success">
+          <%= successMessage %>
+        </div>
         <%} %>
-
         <!-- *In forms, we use the POST method and the action the URL the form needs to be sent to = POST ROUTE -->
 
         <form class="feedback-form" method="POST" action="/feedback">
